Add API endpoints for document handling and email notifications
Implement new API routes for uploading documents, signing PDFs, and sending email notifications using Nodemailer. Update environment variables for API configuration and enhance the frontend to utilize the new API endpoints. Add necessary dependencies in package.json and .env for improved functionality.

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GMAIL_USER=jpdeveloperssoftwaretechnology@gmail.com
 GMAIL_PASS=kpwz mega vyao btlx
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_HePegez0gyY8GRwS_VS3T1DssMAoZctZriMRbjbmyX85vjl"
 FRONTEND_URL=http://localhost:8080
+VITE_API_URL=
