--- a/package.json
+++ b/package.json
@@ -47,16 +47,20 @@
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-virtual": "^3.13.12",
+    "@vercel/blob": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.5",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.3.93",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
