Implement database schema and integrate facial recognition features
- Added database schema for recipients, documents, envelopes, and signatures in backend/db_schema.sql.
- Updated backend/index.js to establish a PostgreSQL connection and create necessary tables.
- Integrated facial recognition capabilities using face-api.js in SelfieCapture component.
- Enhanced document verification process in DocumentCapture component with name matching.
- Updated LandingPage component to handle recipient information and document uploads.
- Added test workflow for API interactions in backend/test_workflow.js.
- Included new dependencies in package.json and package-lock.json for Azure Blob Storage and facial recognition.
- Improved error handling and logging throughout the application.

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GMAIL_PASS=kpwz mega vyao btlx
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_HePegez0gyY8GRwS_VS3T1DssMAoZctZriMRbjbmyX85vjl"
 FRONTEND_URL=http://localhost:8080
 VITE_API_URL=
+DATABASE_URL=postgres://neondb_owner:npg_cIXh26JjLvws@ep-orange-star-aensj8ao-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
