--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@azure/storage-blob": "^12.28.0",
     "@vercel/blob": "^1.1.1",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.3.93"
+    "pdfjs-dist": "^5.3.93",
+    "pg": "^8.16.3"
   }
 }
