--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "face-api.js": "^0.22.2",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
@@ -74,6 +75,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
