--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ BLOB_READ_WRITE_TOKEN="vercel_blob_rw_HePegez0gyY8GRwS_VS3T1DssMAoZctZriMRbjbmyX
 FRONTEND_URL=http://localhost:8080
 VITE_API_URL=
 DATABASE_URL=postgres://neondb_owner:npg_cIXh26JjLvws@ep-orange-star-aensj8ao-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
+VITE_ADMIN_API_KEY=api_a44ed8187b7eefb29518361d3e2eda69
