--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-virtual": "^3.13.12",
     "@vercel/blob": "^1.1.1",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
